présentation flyer anniversaire

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, interactive-widget=resizes-content">
-    <title>Spécialiste numérique</title>
+    <title>Spécialiste Digital</title>
     <link rel="icon" href="./image/faviconAss.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
@@ -226,6 +226,11 @@
                         <img class="collab" src="./image/lenumerique.png" alt="Trois collaborateurs autour d'une table suivant une formation groupé, tous trois sur des appareils numériques">
                         <h3 class="titreLienProjet">Pourquoi le numérique</h3>
                         <p class="texteLienProjet"> Une documentation rédigée et illustrée par mes soins pour partager avec vous l'intérêt du numérique dans votre activité</p>
+                    </a>
+                    <a class="imageCollaborateur " href="https://drive.google.com/file/d/1zzY7baxuObSblW4n9r3ODEIfhtpqA-it/view?usp=drive_link" target="_blank">
+                        <img class="collab" src="./image/flyerBday.png" alt="Trois collaborateurs autour d'une table suivant une formation groupé, tous trois sur des appareils numériques">
+                        <h3 class="titreLienProjet">Flyer d'événement</h3>
+                        <p class="texteLienProjet"> Dans le cadre d'une communication visuelle, un support combinant images et textes conçus par mes soins pour les invités d'un anniversaire.</p>
                     </a>
 
                 </div>
