Home bkg changed

--- a/index.html
+++ b/index.html
@@ -69,26 +69,21 @@
                     <p class="clientcitation textleft">
                         "Comment puis-je créer un site internet ? 🤔”
                     </p>
-                    <p class="clientcitation textcenter">
-                        “J'ai du mal à suivre mes finances! 💵 ”
-                    </p>
                     <p class="clientcitation textright">
                         “Je suis perdue quant aux outils numériques qui pourraient m'être utiles. 😩”
                     </p>
-                    <p class="clientcitation textleft">
+                    <p class="clientcitation textcenter">
                         “Au secours ! J'ai besoin d'un support administratif ! 🆘 ”
                     </p>
-                    <p class="clientcitation textcenter">
+                    <p class="clientcitation textleft">
                         “Je suis démunie face à Excel... 📉”
                     </p>
-                    <p class="clientcitation textright">
-                        "Comment organiser efficacement ses emails ?" 📧
-                    </p>
-                    <p class="clientcitation textleft">
+
+                    <p class="clientcitation textcenter">
                         "Comment automatiser certaines tâches récurrentes ? "⏳
                     </p>
-                    <p class="clientcitation textcenter">
-                        "Comment assurer la sécurité de mes données en ligne ?" 🔒
+                    <p class="clientcitation textright">
+                        "J'ai besoin d'images professionnelles ?" 🔒
                     </p>
                 </div>
 
