ajout de créa dans portfolio

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a class="elementheader" href="#profile">Profil</a>
             <a class="elementheader" href="#service">Services</a>
             <a class="elementheader" href="#clients">Formations</a>
-            <a class="elementheader" href="#projets">Mes projets</a>
+            <a class="elementheader" href="#projets">Mon portfolio</a>
             <a class="elementheader" href="#contacts">Contacts</a>
         </div>
         <div class="sidebarIcons">
@@ -186,15 +186,15 @@
             </div>
             <div class="clientsdeux">
                 <div class="imageCollaborateur">
-                    <img class="collab" src="./image/formdist.jpg" alt="Trois collaborateurs autour d'une table suivant une formation groupé, tous trois sur des appareils numériques">
+                    <img class="collab" src="./image/formdist.jpg" alt="cette photo illustre l'accompagnement à distance par Djouliana">
                     <p id="collab1" class="textecollaborateur"> Accompagnement à distance</p>
                 </div>
                 <div class="imageCollaborateur">
-                    <img class="collab" src="./image/formgroup.jpg" alt="Trois collaborateurs autour d'une table suivant une formation groupé en présentiel, tous trois sur des appareils numériques">
+                    <img class="collab" src="./image/formgroup.jpg" alt="cette image illustre la formation d'un équipe en présenciel par Djouliana">
                     <p id="collab2" class="textecollaborateur"> Accompagnement en équipe</p>
                 </div>
                 <div class="imageCollaborateur">
-                    <img class="collab" src="./image/formun.jpg" alt="un collaborateur suivant une formation individuel.">
+                    <img class="collab" src="./image/formun.jpg" alt="cette photo illustre l'accompagnement individuel proposé par Djouliana ">
                     <p id="collab3" class="textecollaborateur"> Accompagnement individuel</p>
                 </div>
             </div>
@@ -205,59 +205,74 @@
                 <div class="titreProjets">
                     <h2 class="titreElementProjets">Quelques réalisations</h2>
                 </div>
-                <h2 id="titreWeb" class="titreElementProjets">Graphiques:</h2>
+                <h2 id="titreGraphiques" class="titreElementProjets">Graphiques:</h2>
                 <div class="clientsdeux">
                     <a class="imageCollaborateur " href="https://drive.google.com/file/d/1GpQi3liIy9NYKAuImmdPhZyy8NAg9GCO/view?usp=sharing" target="_blank">
-                        <img class="collab" src="./image/Raccourcisclavier.png" alt="Trois collaborateurs autour d'une table suivant une formation groupé, tous trois sur des appareils numériques">
+                        <img class="collab" src="./image/Raccourcisclavier.png" alt="cette image illustre le document rédigé par Djouliana concernant les raccourcis clavier">
                         <h3 class="titreLienProjet"> Mes raccourcis clavier</h3>
                         <p class="texteLienProjet"> Une documentation rédigée et illustrée par mes soins pour partager avec vous quelques raccourcis clavier très utiles à toute personne travaillant sur ordinateur.</p>
                     </a>
                     <a class="imageCollaborateur " href="https://drive.google.com/file/d/1K_77gu7KC03IHo2tkmAQgVeQWyh-GFvJ/view?usp=sharing" target="_blank">
-                        <img class="collab" src="./image/Serviceclient.png" alt="Trois collaborateurs autour d'une table suivant une formation groupé, tous trois sur des appareils numériques">
+                        <img class="collab" src="./image/Serviceclient.png" alt="cette image illustre le document régigé par Djouliana concernant les recommandations professionnels de Djouliana">
                         <h3 class="titreLienProjet">Un service client de qualité.</h3>
                         <p class="texteLienProjet"> Une documentation rédigée et illustrée par mes soins pour partager avec vous mes secrets de relation clients exceptionnelle.</p>
                     </a>
                     <a class="imageCollaborateur " href="https://drive.google.com/file/d/1lhybTSuS51T8U8hywWTNAzGZkjU97pFF/view?usp=sharing" target="_blank">
-                        <img class="collab" src="./image/lenumerique.png" alt="Trois collaborateurs autour d'une table suivant une formation groupé, tous trois sur des appareils numériques">
+                        <img class="collab" src="./image/lenumerique.png" alt="cette image illustre le document régigé par Djouliana concernant l'intêret du numérique dans les activités d'une société">
                         <h3 class="titreLienProjet">Pourquoi le numérique</h3>
                         <p class="texteLienProjet"> Une documentation rédigée et illustrée par mes soins pour partager avec vous l'intérêt du numérique dans votre activité</p>
                     </a>
                     <a class="imageCollaborateur " href="https://drive.google.com/file/d/1zzY7baxuObSblW4n9r3ODEIfhtpqA-it/view?usp=drive_link" target="_blank">
-                        <img class="collab" src="./image/flyerBday.png" alt="Trois collaborateurs autour d'une table suivant une formation groupé, tous trois sur des appareils numériques">
+                        <img class="collab" src="./image/flyerBday.png" alt="cette image illustre un flyer d'anniversaire créé par Djouliana">
                         <h3 class="titreLienProjet">Flyer d'événement</h3>
                         <p class="texteLienProjet"> Dans le cadre d'une communication visuelle, un support combinant images et textes conçus par mes soins pour les invités d'un anniversaire.</p>
+                    </a>
+                    <a class="imageCollaborateur " href="https://drive.google.com/file/d/1XrY9ZjqSOFuA9iXoliupIkIMR-5iF-3y/view?usp=sharing" target="_blank">
+                        <img class="collab" src="./image/excelBI.png" alt="cette image illustre une publication comparative entre excel et power BI créé par Djouliana">
+                        <h3 class="titreLienProjet">Power BI vs Excel</h3>
+                        <p class="texteLienProjet"> Dans le cadre d'une communication visuelle, un support combinant images et textes conçus par mes soins pour réaliser un comparatif entre excel et power BI.</p>
+                    </a>
+                    <a class="imageCollaborateur " href="https://drive.google.com/file/d/1taZtiMv8rcAq6ZX1Fqt-kwmR1MgLozL1/view?usp=sharing" target="_blank">
+                        <img class="collab" src="./image/pubspecialisdigit.png" alt="cette image illustre une publication comparative entre excel et power BI créé par Djouliana">
+                        <h3 class="titreLienProjet">Spécialiste digital</h3>
+                        <p class="texteLienProjet"> Dans le cadre d'une communication visuelle, un support combinant images et textes conçus par mes soins pour expliquer le rôle d'une spécialiste Digital.</p>
                     </a>
 
                 </div>
             </div>
             <h2 id="titreWeb" class="titreElementProjets">Web:</h2>
             <div class="clientsdeux">
+                <a class="imageCollaborateur " href="https://www.lesliqueursdelamartiniquaise.fr/" target="_blank">
+                    <img class="collab" src="./image/lm.png" alt="cette image illustre le site www.lesliqueursdelamartiniquaise.fr">
+                    <h3 class="titreLienProjet"> Projet liqueur</h3>
+                    <p class="texteLienProjet">Développement et gestion en cours du projet de site e commerce pour des prestations BtoB. Rédaction des contenus, choix des images, agencement, etc...</p>
+                </a>
                 <a class="imageCollaborateur " href="https://liyanasc.github.io/LINONDjouliana_2_03112020/P2_02_Reservia.html" target="_blank">
-                    <img class="collab" src="./image/reservia.png" alt="Trois collaborateurs autour d'une table suivant une formation groupé, tous trois sur des appareils numériques">
+                    <img class="collab" src="./image/reservia.png" alt="cette image illustre le site Réservia">
                     <h3 class="titreLienProjet"> Reservia</h3>
                     <p class="texteLienProjet">Mise en place de l’environnement front end d’un site de réservation en ligne compatible tout support.</p>
                 </a>
                 <a class="imageCollaborateur " href="https://liyanasc.github.io/LINONDjouliana_3_08122020/accueil.html" target="_blank">
-                    <img class="collab " src="./image/ohmyfood.png" alt="Trois collaborateurs autour d'une table suivant une formation groupé en présentiel, tous trois sur des appareils numériques">
+                    <img class="collab " src="./image/ohmyfood.png" alt="cette image illustre le site Oh my food">
                     <h3 class="titreLienProjet"> Oh my food!</h3>
                     <p class="texteLienProjet">Mise en place de l’environnement front end d’un site de commande en ligne compatible tout support avec animation au survol.</p>
                 </a>
                 <a class="imageCollaborateur" href="https://liyanasc.github.io/pat-et-jo/#/" target="_blank">
-                    <img class="collab" src="./image/patetjo.png" alt="un collaborateur suivant une formation individuel.">
-                    <h3 class="titreLienProjet"> Pat et Jo</h3>
-                    <p class="texteLienProjet">Mise en place de l’environnement front end d’un site de réservation en ligne compatible tout support.</p>
+                    <img class="collab" src="./image/patetjo.png" alt="cette image illustre le site Chez Pat et Jo">
+                    <h3 class="titreLienProjet">Chez Pat et Jo</h3>
+                    <p class="texteLienProjet">Mise en place de l’environnement front end d’un site de réservation compatible tout support.</p>
                 </a>
             </div>
 
             <h2 id="titreAnalyses" class="titreElementProjets">Analyses:</h2>
             <div class="clientsdeux">
                 <a class="imageCollaborateur " href="https://drive.google.com/file/d/19jFd8icc3hCXYp9ANr62PJMAvhpHvE6P/view?usp=sharing" target="_blank">
-                    <img class="collab" src="./image/foyer.png" alt="Trois collaborateurs autour d'une table suivant une formation groupé, tous trois sur des appareils numériques">
+                    <img class="collab" src="./image/foyer.png" alt="cette image illustre une analyse financière du budget d'un foyer">
                     <h3 class="titreLienProjet"> Budget du foyer</h3>
                     <p class="texteLienProjet">Analyse des ressources et des dépenses d'un foyer, accompagnée de recommandations pour élaborer un plan visant à réaliser des économies. <br>Et ça fonctionne! <br>Pour l'obtenir GRATUITEMENT contactez moi!</p>
                 </a>
                 <a class="imageCollaborateur " href="https://drive.google.com/file/d/1dy8kqWT6D75BYzTsvYYJi-0Tx78myMhH/view?usp=sharing" target="_blank">
-                    <img class="collab " src="./image/Caisse.png" alt="Trois collaborateurs autour d'une table suivant une formation groupé en présentiel, tous trois sur des appareils numériques">
+                    <img class="collab " src="./image/Caisse.png" alt="cette image illustre une analyse financière d'une caisse">
                     <h3 class="titreLienProjet"> Fichier de caisse</h3>
                     <p class="texteLienProjet">récapitulatif des transactions financières, telles que les ventes, les paiements et les remboursements, pour assurer le suivi précis des mouvements monétaires.</p>
                 </a>
@@ -267,13 +282,13 @@
             <h2 id="titreFormation" class="titreElementProjets">Formations:</h2>
             <div class="clientsdeux">
                 <a class="imageCollaborateur " href="https://www.liyanadev.fr/">
-                    <img class="collab" src="./image/assistantenumerique.png" alt="Trois collaborateurs autour d'une table suivant une formation groupé, tous trois sur des appareils numériques">
+                    <img class="collab" src="./image/assistantenumerique.png" alt="cette image illustre le site www.liyanadev.fr développer avec un étudiant">
                     <h3 class="titreLienProjet">Formation Développeur Front-End</h3>
                     <p class="texteLienProjet">Mon propre site est le résultat d'une formation axée sur le développement front-end et l'utilisation de GitHub, centrée sur le projet de refonte complète de mon site web, destinée à un futur étudiant en qui j'ai placé ma confiance,
                         dans le cadre de sa reconversion professionnelle.</p>
                 </a>
                 <a class="imageCollaborateur " href="https://nivmarcellin.my.canva.site/" target="_blank">
-                    <img class="collab " src="./image/marscanva.png" alt="Trois collaborateurs autour d'une table suivant une formation groupé en présentiel, tous trois sur des appareils numériques">
+                    <img class="collab " src="./image/marscanva.png" alt="cette image illustre le site d'un model développer suite à une formation canva dispensé par Djouliana">
                     <h3 class="titreLienProjet"> Formation Canva</h3>
                     <p class="texteLienProjet">Admirez le résultat d'une formation sur l'utilisation de Canva dans le cadre d'un projet de création de portfolio en ligne, visant à présenter une image plus professionnelle auprès des agences.</p>
                 </a>
