--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                 <img class="sizeLogo spiner" src="./image/logoAss.svg" alt="logo">
             </div>
             <div id="titre" class="titre slideInTitle">
-                <h1 class="tailletitre">Digital<br> Specialist</h1>
+                <h1 class="tailletitre" hidden="hidden">Digital<br> Specialist</h1>
+                <img src="/image/logo.png" class="logofinal" alt="">
                 <h2 class="taillesoustitre">#Confidentialité #Engagement #Valeurs</h2>
             </div>
         </header>
