--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
                 </div>
 
-                <p class="textecitation"><em> Transformez vos idées en réalité avec un site web exceptionnel, des applications performantes et des rapports pertinents. Découvrez mes solutions innovantes dès maintenant !</em>.</p>
+                <p class="textecitation"><em> Transformez vos idées en réalité avec un site web exceptionnel, des applications performantes et des rapports pertinents. Découvrez mes solutions innovantes dès maintenant !</em></p>
                 <footer class="elementCitationDeux">
                     <p>Votre future partenaire.</p>
                 </footer>
@@ -290,10 +290,10 @@
             <div class="elementContacts">
                 <h2 id="travaillonsEnsemble" class="titreContacts">Travaillons ensemble!</h2>
                 <img class="imageElementContacts" src="./image/team.jpg" alt="une image de cohésion d'équipe">
-                <p class="texteElementContacts">#Informatique #Immobilier #Finance</p>
+                <p class="texteElementContacts">#Martinique #Guadeloupe #DOM</p>
             </div>
             <div class="elementContactsDeux">
-                <a class="prendreRdv" href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ1VxX5TZ1uw579BOLcnsGYZljfI-Fl5leD5dWDiZst4El4FL7ITpGSCI_aBlL4LadsJ4-WrHVt4?pli=1" target="_blank">
+                <a class="prendreRdv" href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ1VxX5TZ1uw579BOLcnsGYZljfI-Fl5leD5dWDiZst4El4FL7ITpGSCI_aBlL4LadsJ4-WrHVt4?pli=1" target="_blank" hidden="hidden">
                     <img class="logoCalender" src="./image/calender.svg" alt="icon d'un calendrier">
                     <p>PRENDRE RDV</p>
                 </a>
