--- a/index.html
+++ b/index.html
@@ -2,13 +2,23 @@
 <html lang="fr">
 
 <head>
+    <!-- SEO -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-K15NJ6MBNH"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-K15NJ6MBNH');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, interactive-widget=resizes-content">
-    <title>Audit Digital | Créez un Site Web Exceptionnel, des Applications web Performantes et des Rapports Pertinents</title>
+    <title>Agence Digital | Créez un Site Web Exceptionnel, des Applications web Performantes et des Rapports Pertinents - Martinique, Guadeloupe, France et DOM-TOM</title>
     <meta name="robots" content="index,follow">
-    <meta name="description" content="Expert en sites Web à Martinique full remote  | Contactez moi: 0696171811 Transformez vos idées en réalité avec un site web exceptionnel, des applications performantes et des rapports pertinents. Découvrez mes solutions innovantes dès maintenant !">
+    <meta name="description" content="Experte Digital en Martinique et full remote en dans les DOM-TOM et toute la France | Contactez moi: 0696171811 Transformez vos idées en réalité avec un site web exceptionnel, des applications performantes et des rapports pertinents. Découvrez mes solutions innovantes dès maintenant !">
     <link rel="icon" href="./image/faviconAss.ico" type="image/x-icon">
-
+    <!-- STYLE -->
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
