--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                     <p id="collab2" class="textecollaborateur"> Accompagnement en équipe</p>
                 </div>
                 <div class="imageCollaborateur">
-                    <img class="collab" src="./image/formuncell.jpg" alt="cette photo illustre l'accompagnement individuel proposé par Djouliana ">
+                    <img class="collab" src="./image/formun.jpg" alt="cette photo illustre l'accompagnement individuel proposé par Djouliana ">
                     <p id="collab3" class="textecollaborateur"> Accompagnement individuel</p>
                 </div>
             </div>
