Perf - fichier.min

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <meta name="description" content="Experte Digital en Martinique et full remote en dans les DOM-TOM et toute la France | Contactez moi: 0696171811 Transformez vos idées en réalité avec un site web exceptionnel, des applications performantes et des rapports pertinents. Découvrez mes solutions innovantes dès maintenant !">
     <!-- STYLE -->
     <link rel="icon" href="./image/faviconAss.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.min.css">
+    <script src="script.min.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display&display=swap" rel="stylesheet">
@@ -178,46 +178,6 @@
             </footer>
         </section>
 
-        <!-----------------------------------------------------------------------------SERVICE------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------>
-        <section id="service" class="service" hidden="hidden">
-            <div class="titreService">
-                <h3 class="titreservice">
-                    Besoin d'un soutien administratif ponctuel ?
-
-                </h3>
-                <p class="textecitation"> Je vous propose des solutions administratives sur mesure et vous conseille sur la manière d'optimiser vos tâches.</p>
-            </div>
-            <div class="imageService">
-                <div class="listeService">
-                    <div class="elementBlockService">
-                        <img class="iconsService" src="./image/like.svg" alt="image pour la gestion des réclamations positives">
-                        <h4 class="titreIconsService">Réclamations client</h4>
-                    </div>
-                    <div class="elementBlockService">
-                        <img class="iconsService" src="./image/moniteur.svg" alt="image pour la gestion des réclamations positives">
-                        <h4 class="titreIconsService">Gestion administrative</h4>
-                    </div>
-                    <div class="elementBlockService">
-                        <img class="iconsService" src="./image/cell.svg" alt="image pour la gestion des réclamations positives">
-                        <h4 class="titreIconsService"> Communication téléphonique</h4>
-                    </div>
-                </div>
-                <div class="listeService">
-                    <div class="elementBlockService">
-                        <img class="iconsService" src="./image/cloud.svg" alt="image pour la gestion des réclamations positives">
-                        <h4 class="titreIconsService">Gestion de donnéeS</h4>
-                    </div>
-                    <div class="elementBlockService">
-                        <img class="iconsService" src="./image/analyse.svg" alt="image pour la gestion des réclamations positives">
-                        <h4 class="titreIconsService">Reporting & Analyse</h4>
-                    </div>
-                    <div class="elementBlockService">
-                        <img class="iconsService" src="./image/accompagnement.svg" alt="image pour la gestion des réclamations positives">
-                        <h4 class="titreIconsService">Accompagnement</h4>
-                    </div>
-                </div>
-            </div>
-        </section>
         <!---------------------------------------------------------------------------CLIENTS------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
         <section id="clients" class="clients">
             <div class="titreClients">
