--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <p class="descriptionProfile"> Titulaire d'un diplôme en développement informatique.<br> Expérience administrative renforcée me permettant de vous orienter vers les solutions digitales les plus adaptées.</p>
                 <div class="elementprofile2">
                     <a class="boutton" id="btnEnSavoirPlus" href="#citation">En savoir plus <span class="flecheBas"> ></span></a>
-                    <a class="boutton slideIn" id="btnCv" target="_blank" href="https://drive.google.com/file/d/1q8eaQM-_FcrY8-5AddTYhdtK2bvsM7VF/view">Mon CV <span class="flecheDroite">&gt;</span></a>
+                    <a class="boutton " id="btnCv" target="_blank" href="https://drive.google.com/file/d/1q8eaQM-_FcrY8-5AddTYhdtK2bvsM7VF/view">Mon CV <span class="flecheDroite">&gt;</span></a>
                 </div>
             </div>
         </section>
