--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="author" content="Djouliana LINON">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, interactive-widget=resizes-content">
-    <title>Agence Digital | Créez un Site Web Exceptionnel, des Applications web Performantes et des Rapports Pertinents - Martinique, Guadeloupe, France et DOM-TOM</title>
+    <title>Entreprise Digital | Créez un Site Web Exceptionnel, des Applications web Performantes et des Rapports Pertinents - Martinique, Guadeloupe, France et DOM-TOM</title>
     <meta name="description" content="Experte Digital en Martinique et full remote en dans les DOM-TOM et toute la France | Contactez moi: 0696171811 Transformez vos idées en réalité avec un site web exceptionnel, des applications performantes et des rapports pertinents. Découvrez mes solutions innovantes dès maintenant !">
     <!-- STYLE -->
     <link rel="icon" href="./image/faviconAss.ico" type="image/x-icon">
@@ -30,20 +30,48 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script type="application/ld+json">
+        {
+          "@context": "http://schema.org",
+          "@type": "LocalBusiness",
+          "name": "Entreprise Digital et numérique individuelle",
+          "image": "https://raw.githubusercontent.com/StephDev-tech/AssistanteNumerique/main/image/photoprofile.png",
+          "telephone": "+596696171811",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Chemin tamaya",
+            "addressLocality": "le lamentin",
+            "addressRegion": "Martinique",
+            "addressCountry": "France",
+            "postalCode": "97232"
+          },
+          "openingHoursSpecification": {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": [
+            "https://schema.org/Monday",
+            "https://schema.org/Tuesday",
+            "https://schema.org/Thursday",
+            "https://schema.org/Friday"
+          ],
+          "opens": "08:30",
+          "closes": "15:30"
+        }
+        }
+        </script>
 </head>
 
 <body>
     <!-------------------------------------------------------------------------------HEADER----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
     <header class="headerBody">
         <img src="image/iconMenu.svg" alt="icone d'accès au menu" class="iconMenu">
-        <div class="sidebar">
+        <div role="navigation" aria-label="Menu" class="sidebar">
             <a class="elementheader" href="#home">Accueil</a>
             <a class="elementheader" href="#profile">Profil</a>
             <a class="elementheader" href="#clients">Formations</a>
             <a class="elementheader" href="#projets">Mon portfolio</a>
             <a class="elementheader" href="#contacts">Contacts</a>
         </div>
-        <div class="sidebarIcons">
+        <div  role="navigation" aria-label="Menu" class="sidebarIcons">
             <a class="elementheader" href="#home"><img src="image/home.svg" alt="Home"></a>
             <a class="elementheader" href="#profile"><img src="image/perso.svg" alt="Profile"></a>
             <a class="elementheader" href="#clients"><img src="image/coach.svg" alt="Formations"></a>
@@ -71,8 +99,8 @@
                 <img class="photoprofile" src="./image/photoprofile.png" alt="photo de profile">
             </div>
             <div class="elementprofile">
-                <h2 id="titreElementProfile" class="titreElementProfile">Sites web.<br>Applications web. <br>Rapports et Analyses. </h2>
-                <p class="descriptionProfile"> Titulaire d'un diplôme en développement informatique.<br> Expérience administrative renforcée me permettant de vous orienter vers les solutions digitales les plus adaptées.</p>
+                <h2 id="titreElementProfile" tabindex="0" class="titreElementProfile">Sites web.<br>Applications web. <br>Rapports et Analyses. </h2>
+                <p aria- class="descriptionProfile" aria-labelledby="titreElementProfile"> Titulaire d'un diplôme en développement informatique.<br> Expérience administrative renforcée me permettant de vous orienter vers les solutions digitales les plus adaptées.</p>
                 <div class="elementprofile2">
                     <a class="boutton" id="btnEnSavoirPlus" href="#citation">En savoir plus <span class="flecheBas"> ></span></a>
                     <a class="boutton " id="btnCv" target="_blank" href="https://drive.google.com/file/d/1q8eaQM-_FcrY8-5AddTYhdtK2bvsM7VF/view">Mon CV <span class="flecheDroite">&gt;</span></a>
@@ -110,7 +138,7 @@
 
                 </div>
 
-                <p class="textecitation"><em> Transformez vos idées en réalité avec un <strong>site web</strong> exceptionnel, des <strong>applications web</strong> performantes et des rapports pertinents. Découvrez mes solutions innovantes dès maintenant !</em></p>
+                <p class="textecitation"><em> " Transformez vos idées en réalité avec un <strong>site web</strong> exceptionnel, des <strong>applications web</strong> performantes et des rapports pertinents. Découvrez mes solutions innovantes dès maintenant ! "</em></p>
                 <footer class="elementCitationDeux">
                     <p>Votre future partenaire.</p>
                 </footer>
@@ -133,8 +161,8 @@
         <!-----------------------------------------------------------------------EN SAVOIR PLUS----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
         <section class="enSavoirPlus">
             <div class="elementEnSavoirPus">
-                <h2 id="engagezLassistance" class="titreEnSavoirPlus">Boostez Votre Croissance et Renforcez Votre Image Professionnelle </h2>
-                <p class="soustitreEnSavoirPlus"><em>développer sa croissance et son image professionnelle est essentiel pour se démarquer. <br>Découvrez comment des stratégies innovantes  peuvent propulser votre succès <br> et valoriser votre marque:</em></p>
+                <h2 id="engagezLassistance" tabindex="0" class="titreEnSavoirPlus">Boostez Votre Croissance et Renforcez Votre Image Professionnelle </h2>
+                <p class="soustitreEnSavoirPlus" aria-labelledby="engagezLassistance"><em>développer sa croissance et son image professionnelle est essentiel pour se démarquer. <br>Découvrez comment des stratégies innovantes  peuvent propulser votre succès <br> et valoriser votre marque:</em></p>
             </div>
             <div class="description">
                 <div class="descriptionEnSavoirPlus">
@@ -181,21 +209,21 @@
         <!---------------------------------------------------------------------------CLIENTS------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
         <section id="clients" class="clients">
             <div class="titreClients">
-                <h2 id="titreCollab" class="titreclients">Besoin d’un accompagnement renforcé?</h2>
-                <p class="texteclients">Profitez de mon savoir faire et bénéfieciez d’un accompagnement renforcé sur de nombreux outils tel que EXCEL, PowerBI, Office365, openAI, et bien d'autres encore !</p>
+                <h2 id="titreCollab"  tabindex="0" class="titreclients">Besoin d’un accompagnement renforcé?</h2>
+                <p class="texteclients" aria-labelledby="titreCollab">Profitez de mon savoir faire et bénéfieciez d’un accompagnement renforcé sur de nombreux outils tel que EXCEL, PowerBI, Office365, openAI, et bien d'autres encore !</p>
             </div>
             <div class="clientsdeux">
                 <div class="imageCollaborateur">
                     <img class="collab" src="./image/formdist.jpg" alt="cette photo illustre l'accompagnement à distance par Djouliana">
-                    <p id="collab1" class="textecollaborateur"> Accompagnement à distance</p>
+                    <h3 id="collab1" class="textecollaborateur"> Accompagnement à distance</h3>
                 </div>
                 <div class="imageCollaborateur">
                     <img class="collab" src="./image/formgroup.jpg" alt="cette image illustre la formation d'un équipe en présenciel par Djouliana">
-                    <p id="collab2" class="textecollaborateur"> Accompagnement en équipe</p>
+                    <h3 id="collab2" class="textecollaborateur"> Accompagnement en équipe</h3>
                 </div>
                 <div class="imageCollaborateur">
                     <img class="collab" src="./image/formun.jpg" alt="cette photo illustre l'accompagnement individuel proposé par Djouliana ">
-                    <p id="collab3" class="textecollaborateur"> Accompagnement individuel</p>
+                    <h3 id="collab3" class="textecollaborateur"> Accompagnement individuel</h3>
                 </div>
             </div>
         </section>
@@ -275,17 +303,17 @@
             <p class="descriptionProjet"> Exemples d'illustration que je réalise pour donner un rendu encore plus professionnel à vos projets.</p>
 
             <div class="carousel">
-                <img src="image/exemple1.jpg" alt="illustration pro terrasse tropical" class="active">
-                <img src="image/exemple2.jpg" alt="illustration pro verre de liqueur brune">
-                <img src="image/exemple3.jpg" alt="illustration pro verre à cocktail vert">
-                <img src="image/exemple4.jpg" alt="illustration pro verre à cocktail rouge">
-                <img src="image/exemple5.jpg" alt="illustration pro barman">
-                <img src="image/exemple6.jpg" alt="illustration pro serveuse">
-                <img src="image/exemple7.jpg" alt="illustration pro croque-monsieur">
-                <img src="image/exemple8.jpg" alt="illustration pro hot dog">
-                <img src="image/exemple9.jpg" alt="illustration pro sandwich">
-                <button class="nav-button prev" onclick="prevImage()">❮</button>
-                <button class="nav-button next" onclick="nextImage()">❯</button>
+                <img src="image/exemple1.jpg" alt="illustration pro d'une terrasse tropical" class="active">
+                <img src="image/exemple2.jpg" alt="illustration pro d'un verre de liqueur brune">
+                <img src="image/exemple3.jpg" alt="illustration pro d'un verre à cocktail vert">
+                <img src="image/exemple4.jpg" alt="illustration pro d'un verre à cocktail rouge">
+                <img src="image/exemple5.jpg" alt="illustration pro d'un barman">
+                <img src="image/exemple6.jpg" alt="illustration pro d'une serveuse">
+                <img src="image/exemple7.jpg" alt="illustration pro d'un croque-monsieur">
+                <img src="image/exemple8.jpg" alt="illustration pro d'un hot dog">
+                <img src="image/exemple9.jpg" alt="illustration pro d'un sandwich">
+                <button class="nav-button prev" onclick="prevImage()" aria-label="image suivante">❮</button>
+                <button class="nav-button next" onclick="nextImage()" aria-label="image précédente">❯</button>
             </div>
         
 
@@ -358,6 +386,14 @@
                 </div>
             </div>
         </section>
+        <footer> 
+            <div class="waveTop violetAndBlack ">
+                <svg viewBox="0 0 1440 320" preserveAspectRatio="none">
+                    <path fill="rgb(131, 92, 246)" fill-opacity="1" d="M0,96L30,101.3C60,107,120,117,180,122.7C240,128,300,128,360,144C420,160,480,192,540,197.3C600,203,660,181,720,170.7C780,160,840,160,900,154.7C960,149,1020,139,1080,154.7C1140,171,1200,213,1260,213.3C1320,213,1380,171,1410,149.3L1440,128L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"></path>
+                </svg>
+             </div>
+             
+        </footer>
     </main>
 
 </body>
