--- a/index.html
+++ b/index.html
@@ -86,11 +86,10 @@
     <main class="main">
         <header id="home" class="home">
             <div class="logo">
-                <img class="sizeLogo spiner" src="./image/logoAss.svg" alt="logo">
+                <img src="/image/logo.png" class="sizeLogo" alt="">
             </div>
             <div id="titre" class="titre slideInTitle">
                 <h1 class="tailletitre" >Entreprise Digital<br>et numérique individuelle</h1>
-                <img src="/image/logo.png" class="logofinal" alt="" hidden="hidden">
                 <h2 class="taillesoustitre">#Confidentialité #Engagement #Valeurs</h2>
             </div>
         </header>
@@ -104,7 +103,7 @@
                 <h2 id="titreElementProfile" tabindex="0" class="titreElementProfile">Sites web.<br>Applications web. <br>Rapports et Analyses. </h2>
                 <p aria- class="descriptionProfile" aria-labelledby="titreElementProfile"> Titulaire d'un diplôme en développement informatique.<br> Expérience administrative renforcée me permettant de vous orienter vers les solutions digitales les plus adaptées.</p>
                 <div class="elementprofile2">
-                    <a class="boutton" id="btnEnSavoirPlus" href="#citation">En savoir plus <span class="flecheBas"> ></span></a>
+                    <a class="boutton" id="btnEnSavoirPlus"  target="_blank" href="https://miro.com/app/board/uXjVLWPnTRQ=/?share_link_id=978679986125"> Compétences <span class="flecheDroite"> ></span></a>
                     <a class="boutton " id="btnCv" target="_blank" href="https://drive.google.com/file/d/1q8eaQM-_FcrY8-5AddTYhdtK2bvsM7VF/view">Mon CV <span class="flecheDroite">&gt;</span></a>
                 </div>
             </div>
