refactor: texte de présentation
mis à jour des informations utilisateur

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <img src="/image/logo.png" class="sizeLogo" alt="">
             </div>
             <div id="titre" class="titre slideInTitle">
-                <h1 class="tailletitre" >Entreprise Digital<br>et numérique individuelle</h1>
+                <h1 class="tailletitre" >Analyste <br> Développeuse informatique </h1>
                 <h2 class="taillesoustitre">#Confidentialité #Engagement #Valeurs</h2>
             </div>
         </header>
@@ -101,7 +101,7 @@
             </div>
             <div class="elementprofile">
                 <h2 id="titreElementProfile" tabindex="0" class="titreElementProfile">Sites web.<br>Applications web. <br>Rapports et Analyses. </h2>
-                <p aria- class="descriptionProfile" aria-labelledby="titreElementProfile"> Titulaire d'un diplôme en développement informatique.<br> Expérience administrative renforcée me permettant de vous orienter vers les solutions digitales les plus adaptées.</p>
+                <p aria- class="descriptionProfile" aria-labelledby="titreElementProfile"> Je suis titulaire d'un diplôme en développement informatique.<br> J'ai de plus une expérience administrative et dans la grande distribution renforcée me permettant de vous orienter vers les solutions digitales les plus adaptées.</p>
                 <div class="elementprofile2">
                     <a class="boutton" id="btnEnSavoirPlus"  target="_blank" href="https://miro.com/app/board/uXjVLWPnTRQ=/?share_link_id=978679986125"> Compétences <span class="flecheDroite"> ></span></a>
                     <a class="boutton " id="btnCv" target="_blank" href="https://drive.google.com/file/d/1q8eaQM-_FcrY8-5AddTYhdtK2bvsM7VF/view">Mon CV <span class="flecheDroite">&gt;</span></a>
@@ -127,19 +127,19 @@
             <blockquote class="elementCitation">
                 <div class="blockclientcitation">
                     <p class="clientcitation textleft">
-                        "Comment créer un <strong>site internet</strong> ? 🤔”
+                        "Quels outils pour créer un <strong>site internet</strong> ? 🤔”
                     </p>
                     <p class="clientcitation textright">
-                        “Quels <strong>outils numériques</strong> choisir? 😩”
+                        “Quelles <strong>applications </strong> choisir pour mon activité? 😩”
                     </p>
                 
                     <p class="clientcitation textleft">
-                        “Comment créer un rapport sur <strong>Excel</strong>... 📉”
+                        “Quel type de rapport serait pertinant pour nos analyses <strong>Excel? Power BI? </strong>... 📉”
                     </p>
 
                 </div>
 
-                <p class="textecitation"><em> " Transformez vos idées en réalité avec un <strong>site web</strong> exceptionnel, des <strong>applications web</strong> performantes et des rapports pertinents. Découvrez mes solutions innovantes dès maintenant ! "</em></p>
+                <p class="textecitation"><em> " Dotée d’un parcours généraliste et riche de plus de 15 ans d’expérience, mon profil polyvalent et mon appétence pour la résolution de problématiques complexes me permettent d’intervenir efficacement au sein d'une équipe ou en lien direct avec les décideurs"</em></p>
                 <footer class="elementCitationDeux">
                     <p>Votre future partenaire.</p>
                 </footer>
@@ -163,23 +163,23 @@
         <section class="enSavoirPlus">
             <div class="elementEnSavoirPus">
                 <h2 id="engagezLassistance" tabindex="0" class="titreEnSavoirPlus">Boostez Votre Croissance et Renforcez Votre Image Professionnelle </h2>
-                <p class="soustitreEnSavoirPlus" aria-labelledby="engagezLassistance"><em>développer sa croissance et son image professionnelle est essentiel pour se démarquer. <br>Découvrez comment des stratégies innovantes  peuvent propulser votre succès <br> et valoriser votre marque:</em></p>
+                <p class="soustitreEnSavoirPlus" aria-labelledby="engagezLassistance"><em>Découvrez comment des stratégies innovantes  peuvent propulser votre succès <br> et valoriser votre marque:</em></p>
             </div>
             <div class="description">
                 <div class="descriptionEnSavoirPlus">
                     <h3 class="titreElementDescription"> Pour les besoins administratif:</h3>
                     <p class="texteElementDescription">
-                        Je connais l'ensemble des outils qui vous seront utiles.
-                        <br>Création de rapports.
-                        <br>Suivi de dossiers.
-                        <br>Saisie de documents.
-                        <br>Suivi des chiffres
+                       Connaissances sur un large ensemble d'outils qui vous seront utiles pour:
+                        <br>La création de rapports.
+                        <br>Le suivi de dossiers.
+                        <br>La saisie de documents.
+                        <br>Le suivi des chiffres
                         <br>etc...
 
                     </p>
                     <h3 class="titreElementDescription"> Formations <br>Personnalisées :</h3>
                     <p class="texteElementDescription">
-                       microformations sur mesure pour vos besoins spécifiques en outils digitaux tels qu'Excel, Power BI, Adobe, IA, etc...
+                       Capacité à créer des microformations sur mesure pour des besoins spécifiques en outils digitaux tels qu'Excel, Power BI, Adobe, IA, etc...
                     </p>
                 </div>
                 <div>
@@ -194,21 +194,20 @@
                 </div>
                 <div class="descriptionEnSavoirPlusDeux">
                     <h3 class="titreElementDescriptionDeux">Gestion des Données :</h3>
-                    <p class="texteElementDescriptionDeux">Transformez vos données en informations exploitables avec <br>des rapports clairs et précis. Optez pour des analyse <br>approfondie avec des tableaux de bord interactifs et une <br>organisation optimale des informations.</p>
+                    <p class="texteElementDescriptionDeux">Transformer des données en informations exploitables avec <br>des rapports clairs et précis.<br>  Distribuer des analyses approfondies avec des tableaux de bord interactifs.  <br>Organier de façon optimale des informations avec une approche UI/UX.</p>
                     <h3 class="titreElementDescriptionDeux">Polyvalence Informatique :</h3>
-                    <p class="texteElementDescriptionDeux">Création de votre site web professionel, optimisation SEO, <br> outils numériques pertinents. <br>Adaptabilité et apprentissage continu pour répondre à <br>toutes les exigences informatiques et numérique qui vous <br>aideront.</p>
+                    <p class="texteElementDescriptionDeux">Créer des sites web professionel, optimiser le SEO, <br> Choisir des outils numériques pertinents. <br>Adaptabilité et apprentissage continu pour répondre à <br>toutes les exigences informatiques et numérique qui vous <br>aideront.</p>
                 </div>
             </div>
             <footer class="footerEnSavoirPlus">
-                <p>Ne laissez pas votre potentiel inexploré 
-                    <br>prenez les devants et transformez vos ambitions en réalisations concrètes dès aujourd'hui !
-                    <br><strong>#Martinique</strong> <strong>#Guadeloupe</strong> <strong>#DOM-TOM</strong>
+                <p>prenez les devants et transformez vos ambitions en réalisations concrètes dès aujourd'hui !
+                    <br><strong>#Ile de France</strong> <strong>#Remote</strong> <strong>#Martinique</strong>
                 </p>
             </footer>
         </section>
 
         <!---------------------------------------------------------------------------CLIENTS------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
-        <section id="clients" class="clients">
+        <section id="clients" class="clients" hidden="hidden">
             <div class="titreClients">
                 <h2 id="titreCollab"  tabindex="0" class="titreclients">Besoin d’un accompagnement renforcé?</h2>
                 <p class="texteclients" aria-labelledby="titreCollab">Profitez de mon savoir faire et bénéfieciez d’un accompagnement renforcé sur de nombreux outils tel que EXCEL, PowerBI, Office365, openAI, et bien d'autres encore !</p>
