feat : Création d'un labo avec vuejs + vite

--- a/index.html
+++ b/index.html
@@ -350,6 +350,17 @@
                 </div>
             </div>
 
+            <div class="elementProjets">
+                <h2 class="titreElementProjets"> Mon Labo :</h2>
+                <a href="./labo/dist/index.html" target="_blank" rel="noopener noreferrer">
+                    <img src="./image/labo.png" alt="Mon Labo" class="labodev">
+                </a>
+ 
+
+            </div>
+
+
+
         
         </section>
         <div class="waveBottom  violetAndBlack">
