fix : retrait de l'appli qui bug + ajout simplifie

--- a/index.html
+++ b/index.html
@@ -248,10 +248,10 @@
             </div>
             <h2 id="titreWeb" class="titreElementProjets">Web:</h2>
             <div class="clientsdeux">
-                <a class="imageCollaborateur " href="https://www.lesliqueursdelamartiniquaise.fr/" target="_blank">
-                    <img class="collab" src="./image/lm.png" alt="cette image illustre le site www.lesliqueursdelamartiniquaise.fr">
-                    <h3 class="titreLienProjet"> Projet liqueur</h3>
-                    <p class="texteLienProjet">Développement et gestion en cours du projet de site e commerce pour des prestations BtoB: Développement, Rédaction des contenus, illustrations, etc...</p>
+                <a class="imageCollaborateur " href="https://www.simplifie-ta-vie.fr/" target="_blank">
+                    <img class="collab" src="./image/simplifie.png" alt="cette image illustre le site www.simplifie-ta-vie.fr">
+                    <h3 class="titreLienProjet"> Projet Simplifie ta Vie</h3>
+                    <p class="texteLienProjet">Développement et gestion en cours du projet de site micro-frontend pour des outils de gestion du quotidien : listes, budgets, plannings, etc...</p>
                 </a>
                 <a class="imageCollaborateur " href="https://liyanasc.github.io/LINONDjouliana_2_03112020/P2_02_Reservia.html" target="_blank">
                     <img class="collab" src="./image/reservia.png" alt="cette image illustre le site Réservia">
